# gschem3

./: .gitignore  README.md  autogen.sh  configure.ac
src/: Angle.vala  ArcItem.vala  ArcTool.vala  AttributeChild.vala  AttributeEditor.ui.xml  AttributeParent.vala  AttributePromoter.vala  Bounds.vala  BoxItem.vala  BusItem.vala  CapType.vala  CircleItem.vala  Color.vala  ColorScheme.vala  ComplexItem.vala  Coord.vala  CustomAction.vala  DashType.vala  DocumentTab.ui.xml  DocumentWindow.vala  DrawingTool.vala  DrawingToolArc.vala  DrawingToolBox.vala  DrawingToolBus.vala  DrawingToolCircle.vala  DrawingToolLine.vala  DrawingToolNet.vala  DrawingToolPath.vala  DrawingToolPin.vala  DrawingToolSelect.vala  ExportBillOfMaterial.vala  ExportNetlist.vala  ExportNetlistDialog.ui.xml  ExportNetlistDialog.vala  ExportSchematics.vala  FileVersion.vala  Fileable.vala  FillStyle.vala  FillStyleEditor.ui.xml  FillType.vala  (+98 more)
src/cfg/: SystemLibrary.vala
src/gui/: ActionProvider.vala  AttributeEditor.vala  ClipboardHelper.vala  ClipboardSupport.vala  DocumentOpener.vala  DocumentSelector.vala  DocumentTab.vala  DocumentWindow.vala  DocumentWindowFactory.vala  DocumentWindowNotebook.vala  DrawingTool.vala  DrawingToolSet.vala  ErrorDialog.vala  ExportBillOfMaterialDialog.vala  FillStyleEditor.vala  FillSwatchRenderer.vala  Grid.vala  GridSize.vala  ItemEditor.vala  LibraryAdapter.vala  LibraryWidget.ui.xml  LibraryWidget.vala  LibraryWidgetMenu.ui.xml  LineStyleEditor.vala  MainComplexFactory.vala  MainWindow.ui.xml  MainWindow.vala  NewProjectDialog.vala  PreviewWidget.vala  ProjectAdapter.vala  ProjectWidget.ui.xml  ProjectWidget.vala  ProjectWidgetMenu.ui.xml  SchematicPasteHandler.vala  SchematicSupport.vala  SchematicWindow.vala  SchematicWindowFactory.vala  SchematicWindowOpener.vala  SchematicWindowSettings.vala  SpecificWindowFactory.vala
src/gui/act/: CustomAction.vala  EditItemAction.vala  ExportBillOfMaterial.vala  ExportNetlist.vala  ExportSchematics.vala
src/gui/aedit/: AttributeCreating.vala  AttributeEditing.vala  AttributeEditor.ui.xml  AttributeEditor.vala  AttributeState.vala
src/gui/dlg/: ColumnHelper.vala  PinEditorDialog.ui.xml  PinEditorDialog.vala  PinTypeColumnHelper.vala  TextColumnHelper.vala
src/gui/epins/: ColumnHelper.vala  PinEditorDialog.vala
src/gui/etext/: TextEditorDialog.ui.xml  TextEditorDialog.vala
src/gui/grid/: MeshGrid.vala  NoGrid.vala
src/gui/libw/: LibraryWidget.ui.xml  LibraryWidget.vala  PreviewWidget.vala
src/gui/pedit/: ColorEditor.ui.xml  ColorEditor.vala  ColorSwatchRenderer.vala  FillStyleEditor.ui.xml  FillStyleEditor.vala  LineStyleEditor.ui.xml  LineStyleEditor.vala  PinPropertyEditor.ui.xml  PinPropertyEditor.vala  PropertyComboBox.vala  PropertyEditor.vala  TextPropertyEditor.ui.xml  TextPropertyEditor.vala  ValueState.vala
src/gui/prjw/: ProjectAdapter.vala  ProjectWidget.vala  ProjectWidgetMenu.ui.xml
src/gui/schw/: SchematicWindow.vala
src/gui/tdlg/: PinEditorDialog.ui.xml  TextEditorDialog.ui.xml  TextEditorDialog.vala
src/gui/tool/: ArcTool.vala  AttributeFactory.vala  AttributeTool.vala  BoxTool.vala  BusTool.vala  CircleTool.vala  ComplexFactory.vala  ComplexSelector.vala  ComplexTool.vala  DrawingToolBox.vala  DrawingToolBus.vala  DrawingToolCircle.vala  DrawingToolNet.vala  DrawingToolPath.vala  DrawingToolSelect.vala  LineTool.vala  NetTool.vala  PathTool.vala  PinItemGroup.vala  PinSettings.vala  PinTool.vala  PinUpdater.vala  PlacementFactory.vala  PlacementTool.vala  SelectTool.vala  TextFactory.vala  TextTool.vala  ZoomTool.vala
src/gui/ucom/: ActionProvider.vala  ProjectSelector.vala  Savable.vala
src/gui/wid/: AlignmentComboBox.ui.xml  AlignmentComboBox.vala  ColorComboBox.ui.xml  ColorComboBox.vala  PropertyComboBox.vala  RotationComboBox.ui.xml  RotationComboBox.vala  TextSizeComboBox.ui.xml  TextSizeComboBox.vala
src/gui/xbom/: ExportBillOfMaterial.vala  ExportBillOfMaterialDialog.ui.xml  ExportBillOfMaterialDialog.vala
src/gui/xnet/: ExportNetlist.vala  ExportNetlistDialog.ui.xml  ExportNetlistDialog.vala
src/gui/xsch/: ExportSchematics.vala
src/key/: LibraryEntry.vala
src/lib/: ContributorAdapter.vala  LibraryContributor.vala  LibraryContributorTest.vala  LibraryEntry.vala  LibraryFolder.vala  LibraryItem.vala  LibraryStore.vala  SymbolLibrary.vala  SymbolLibraryBase.vala  SystemLibrary.vala
src/prj/: NetlisterConfiguration.vala  PartlisterConfiguration.vala  Project.vala  ProjectFile.vala  ProjectItem.vala  ProjectItemAdapter.vala  ProjectStorage.vala
src/prj/key/: KeyFileProjectMapper.vala  KeyFileProjectStorage.vala  KeyFileSymbolLibrary.vala  KeyProjectFileMapper.vala
src/sch/: AdjustableColor.vala  AdjustableFillStyle.vala  AdjustableLineStyle.vala  AdjustableRadius.vala  AdjustableSweep.vala  AngleGrip.vala  ArcItem.vala  AttributeChild.vala  AttributeCreator.vala  AttributeParent.vala  AttributePositioner.vala  BasicAttributePositioner.vala  Bounds.vala  BoxCornerGrip.vala  BoxCornerGripCommon.vala  BoxItem.vala  BusDirection.vala  BusItem.vala  CapType.vala  CircleItem.vala  Colorable.vala  ComplexItem.vala  ComplexLibrary.vala  ComplexSymbol.vala  Coord.vala  DashType.vala  DefaultSlotter.vala  FileVersion.vala  FillStyle.vala  FillType.vala  Fillable.vala  Grip.vala  GripAssistant.vala  Grippable.vala  GrippablePoints.vala  LineItem.vala  LineStyle.vala  NetItem.vala  PathCommand.vala  PathCommandConverter.vala  (+24 more)
src/sch/path/: AbsoluteLineToCommand.vala  AbsoluteMoveToCommand.vala  ClosePathCommand.vala  ParseUtility.vala  PathCommandConverter1.vala  RelativeLineToCommand.vala  RelativeMoveToCommand.vala
tests/: Makefile.am  TestAngle.vala  TestBounds.vala  TestColor.vala  TestColorScheme.vala  TestCoord.vala  TestFillStyle.vala  TestLineItem.vala  TestLineStyle.vala  TestPinItem.vala  TestPrintDimension.vala  TestPrintUnits.vala  TestSchematic.vala  TestSchematicItemBus.vala  TestSchematicItemLine.vala  TestSchematicItemNet.vala  TestSchematicItemPin.vala  TestSchematicReader.vala  TestSweep.vala  TestSymbolLibrary.vala  TestTextItem.vala  input.sch
(+1494 files in other folders)
